# py2puml

./: .gitignore  .pre-commit-config.yaml  .prototools  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_BACKUP_8587.md  README_BASE_8587.md  README_REMOTE_8587.md  commitlint.config.js  constructor_parsing.md  init.sh  poetry.toml  pyproject.toml  releaserc.toml  setup.py
.github/workflows/: code-quality.yml  lint-and-test.yml  python-package.yml  release.yml
py2puml/: __init__.py  __main__.py  asserts.py  cli.py  controller.py  example.py  exportpuml.py  inspector.py  parser.py  py2puml.domain.puml  py2puml.parsing.puml  py2puml.py  utils.py
py2puml/domain/: inspection.py  myminiclass.py  package.py  umlattribute.py  umlclass.py  umlcomposition.py  umlenum.py  umlfunc.py  umlitem.py  umlrelation.py
py2puml/domain/subdomain/: subdomain.py
py2puml/export/: namespace.py  puml.py
py2puml/inspection/: astvisitors.py  compoundtypesplitter.py  inspectclass.py  inspectenum.py  inspectmodule.py  inspectnamedtuple.py  inspectpackage.py  moduleresolver.py
py2puml/parsing/: astvisitors.py  compoundtypesplitter.py  moduleresolver.py  parseclassconstructor.py
src/py2puml/: __main__.py  asserts.py  controller.py  inspector.py
src/py2puml/domain/: umlrelation.py
src/py2puml/inspection/: inspectclass.py  inspectmodule.py  inspectnamedtuple.py
src/py2puml/parsing/: compoundtypesplitter.py  moduleresolver.py
tests/: __init__.py  test_py2puml.py
tests/asserts/: attribute.py  method.py  relation.py  variable.py
tests/modules/: withabstract.py  withbasictypes.py  withcomposition.py  withcompoundtypewithdigits.py  withconstructor.py  withenum.puml  withenum.py  withimportedbuiltins.puml  withimportedbuiltins.py  withinheritancewithinmodule.py  withnamedtuple.py  withsubdomain.py  withuniontypes.py  withwrappedconstructor.py
tests/modules/withconfusingrootpackage/test/: range.py  test.puml
tests/modules/withinheritedconstructor/: metricorigin.py  point.py
tests/modules/withmethods/: withinheritedmethods.py  withmethods.py
tests/modules/withnestednamespace/: plantuml_namespace.txt  tests.modules.withnestednamespace.puml  tree.py
tests/modules/withnestednamespace/branches/: branch.py
tests/modules/withnestednamespace/nomoduleroot/modulechild/: leaf.py
tests/modules/withnestednamespace/trunks/: trunk.py
tests/modules/withnestednamespace/withonlyonesubpackage/underground/: __init__.py
tests/modules/withnestednamespace/withonlyonesubpackage/underground/roots/: roots.py
tests/modules/withnestednamespace/withoutumlitemroot/withoutumlitemleaf/: withoutumlitem.py
tests/modules/withpkginitandmodule/: __init__.py  test.py  tests.modules.withpkginitandmodule.puml
tests/modules/withpkginitonly/: __init__.py  tests.modules.withpkginitonly.puml
tests/modules/withrootnotincwd/: point.py  segment.py  withrootnotincwd.puml
tests/modules/withrootscriptandsrc/: tool.puml  tool.py  withrootscriptandsrc.puml
tests/modules/withrootscriptandsrc/src/withrootscriptandsrc/: __init__.py  argshandler.py
tests/modules/withsubdomain/: tests.modules.withsubdomain.puml  withsubdomain.py
tests/modules/withsubdomain/subdomain/: insubdomain.py
tests/puml_files/: with_methods.puml  withrootnotincwd.puml
tests/py2puml/: __init__.py  conftest.py  test__init__.py  test_asserts.py  test_cli.py  test_cli_controller.py  test_controller.py  test_parser.py  test_py2puml.py
tests/py2puml/export/: test_filters.py  test_namespace.py
tests/py2puml/inspection/: test_compoundtypesplitter.py  test_inspect_union_types.py  test_inspectclass.py  test_inspectdataclass.py  test_inspectenum.py  test_inspectnamedtuple.py  test_moduleresolver.py
tests/py2puml/parsing/: mockedinstance.py  test_astvisitors.py  test_compoundtypesplitter.py  test_moduleresolver.py  test_parse_constructor.py  test_parseclassconstructor.py
