[project]
name = "py2puml"
version = "0.11.0"
description = "Generate PlantUML class diagrams to document your Python application."
keywords = ["class diagram", "PlantUML", "documentation", "inspection", "AST"]
readme = "README.md"
authors = [{ name = "Luc Sorel-Giffo" }]
maintainers = [{ name = "Luc Sorel-Giffo" }]
license = "MIT"
requires-python = ">=3.10.9"
dependencies = []

[project.urls]
Repository = "https://github.com/lucsorel/py2puml.git"
Issues = "https://github.com/lucsorel/py2puml/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.0.0",
]
lint = ["pre-commit>=4.1.0"]

[project.scripts]
py2puml = "py2puml.__main__:run"

[tool.uv]
default-groups = ["dev", "lint"]

[tool.pytest.ini_options]
console_output_style = "count"
pythonpath = ["src"]

[tool.coverage.run]
# Functional tests use src/py2puml/asserts.py::assert_py2puml_command_args(), which runs py2puml in subprocesses
# set patch to subprocess to include the calls in the coverage
# see https://coverage.readthedocs.io/en/latest/config.html#config-run-patch
patch = ["subprocess"]

[tool.isort]
py_version=310
# maintain consistency with other quality tools
line_length = 120
# consistency with ruff-format: mode 3
# from third_party import (
#     lib1,
#     lib2,
#     [...]
#     libn,
# )
multi_line_output = 3
include_trailing_comma = true
# TESTS->known_tests: create a specific section for imports of tests modules
# (this is the reason why isort is still used alongside ruff-format)
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TESTS"]
known_tests = ["tests"]

[tool.ruff]
target-version = "py310"
# maintain consistency with other quality tools
line-length = 120
# automatically fixes when possible
fix = true

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
# activated families of verifications (https://beta.ruff.rs/docs/rules/
select = ["B", "E", "F", "W", "N", "SIM", "C4"]
# do not check:
# - E501 line lengths: ruff formatter already handles them
# - B905 zip(*, strict=True): strict was introduced in Python 3.10+
extend-ignore = ["E501", "B905"]

[tool.ruff.lint.per-file-ignores]
# do not check unused imports in __init__.py files (they expose module features)
"__init__.py" = ["E402"]
# visiting function names include uppercase words (visit_FunctionDef)
"py2puml/parsing/astvisitors.py" = ["N802"]
"tests/asserts/variable.py" = ["N802"]
"tests/py2puml/parsing/test_astvisitors.py" = ["N802", "N805"]
"tests/py2puml/parsing/test_compoundtypesplitter.py" = ["N802"]
"tests/py2puml/parsing/test_moduleresolver.py" = ["N802"]
"tests/__init__.py" = ["B023"]
# test classes with underscore in their names
"tests/modules/withuniontypes.py" = ['N801']

[tool.ruff.lint.isort]
forced-separate = ["tests"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

# [[tool.uv.index]]
# name = "pypi"
# url = "https://pypi.org/simple"
# publish-url = "https://upload.pypi.org/legacy/"

# [[tool.uv.index]]
# name = "testpypi"
# url = "https://test.pypi.org/simple"
# publish-url = "https://test.pypi.org/legacy/"
